<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">"Material Design Codelab "</string>
    <string name="action_settings">Settings</string>
    <string name="item_title">Palais Garnier</string>
    <string name="item_desc">The Palais Garnier which locates in Paris was built from 1861 for
        the Paris Opera.
    </string>
    <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>
    <string name="detail_location">"8 Rue Scribe, 75009 Paris, France"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_title_home">Главная</string>
    <string name="tab_title_news">Новости</string>
    <string name="tab_title_shops">Магазины</string>
    <string name="tab_title_gifts">Подарки</string>
    <string name="tab_title_contacts">Контакты</string>
    <string name="tab_title_profile">Ваш профиль</string>
    <string name="tab_title_sing_out">Выход</string>
    <string name="default_name">Иван Иванович</string>
    <string name="default_phone">+7 (909) 123 4567</string>
    <string name="hostname">http://boxbonus.ixvil.ru/</string>
    <string name="auth_error">Ошибка авторизации</string>
    <string name="image_url_prefix">http://boxbonus.ixvil.ru/uploads/</string>
    <string name="activity_detail_description">Описание</string>
    <string name="activity_detail_location">Адрес</string>
    <string name="activity_detail_gifts">Подарки</string>
</resources>
