<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_home_black_24dp"
            android:tint="@color/button_grey"
            android:title="@string/tab_title_home" />
        <item
            android:icon="@drawable/ic_filter_list_black_24dp"
            android:tint="@color/button_grey"
            android:title="@string/tab_title_news" />
        <item
            android:icon="@drawable/ic_store_mall_directory_black_24dp"
            android:tint="@color/button_grey"
            android:title="@string/tab_title_shops" />
        <item
            android:icon="@drawable/ic_unarchive_black_24dp"
            android:tint="@color/button_grey"
            android:title="@string/tab_title_gifts" />
    </group>
    <group>
        <item
            android:icon="@drawable/ic_contacts_black_24dp"
            android:tint="@color/button_grey"
            android:title="@string/tab_title_contacts" />
        <item
            android:icon="@drawable/ic_person_black_24dp"
            android:tint="@color/button_grey"
            android:title="@string/tab_title_profile" />
        <item
            android:icon="@drawable/ic_keyboard_return_black_24dp"
            android:tint="@color/button_grey"
            android:title="@string/tab_title_sing_out" />


    </group>
</menu>
